-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.14.0, Qt Creator 4.15.0-beta1
-
None
-
-
413b83ddf94d2294e68e56ed6da87560f74e284b
I opened a pro file and asked for a "Run qmake" from the project context menu.
Its a subdirs project.
(2cf0.244): Access violation - code c0000005 (first chance) First chance exceptions are reported before any exception handling. This exception may be expected and handled. *** WARNING: Unable to verify checksum for C:\qt\qtcreator-4.14.0\lib\qtcreator\plugins\QmakeProjectManager4.dll QmakeProjectManager4!QmakeProjectManager::QmakePriFile::scheduleUpdate+0x28: 00007ffd`777d1468 8b10 mov edx,dword ptr [rax] ds:000001df`80000008=???????? 0:000> .ecxr Unable to get exception context, HRESULT 0x8000FFFF 0:000> !analyze -v ******************************************************************************* * * * Exception Analysis * * * ********************************************************************************** WARNING: Unable to verify checksum for C:\qt\qtcreator-4.14.0\lib\qtcreator\plugins\Core4.dll *** ERROR: Symbol file could not be found. Defaulted to export symbols for c:\qt\qtcreator-4.14.0\bin\Qt5Core.dll - *** ERROR: Symbol file could not be found. Defaulted to export symbols for c:\qt\qtcreator-4.14.0\bin\Qt5Widgets.dll - *** ERROR: Symbol file could not be found. Defaulted to export symbols for C:\qt\qtcreator-4.14.0\bin\plugins\platforms\qwindows.dll - *** WARNING: Unable to verify checksum for c:\qt\qtcreator-4.14.0\bin\qtcreator.exe *** ERROR: Module load completed but symbols could not be loaded for C:\Windows\system32\tmumh\20019\TmMon\2.8.0.1041\tmmon64.dll *** ERROR: Symbol file could not be found. Defaulted to export symbols for C:\WINDOWS\System32\DriverStore\FileRepository\nv_dispi.inf_amd64_90685a092bcf58c7\nvwgf2umx.dll - *** WARNING: Unable to verify checksum for C:\qt\qtcreator-4.14.0\lib\qtcreator\plugins\QmlDesigner4.dll *** ERROR: Symbol file could not be found. Defaulted to export symbols for c:\qt\qtcreator-4.14.0\bin\Qt5Qml.dll - *** WARNING: Unable to verify checksum for c:\qt\qtcreator-4.14.0\bin\ProParser4.dll *** ERROR: Symbol file could not be found. Defaulted to export symbols for c:\qt\qtcreator-4.14.0\bin\ProParser4.dll - FAULTING_IP: QmakeProjectManager4!QmakeProjectManager::QmakePriFile::scheduleUpdate+28 [C:\Users\qt\work\build\qt-creator\src\plugins\qmakeprojectmanager\qmakeparsernodes.cpp @ 237] 00007ffd`777d1468 8b10 mov edx,dword ptr [rax]EXCEPTION_RECORD: ffffffffffffffff -- (.exr 0xffffffffffffffff) ExceptionAddress: 00007ffd777d1468 (QmakeProjectManager4!QmakeProjectManager::QmakePriFile::scheduleUpdate+0x0000000000000028) ExceptionCode: c0000005 (Access violation) ExceptionFlags: 00000000 NumberParameters: 2 Parameter[0]: 0000000000000000 Parameter[1]: 000001df80000008 Attempt to read from address 000001df80000008FAULTING_THREAD: 0000000000000244DEFAULT_BUCKET_ID: INVALID_POINTER_READPROCESS_NAME: qtcreator.exeERROR_CODE: (NTSTATUS) 0xc0000005 - The instruction at 0x%p referenced memory at 0x%p. The memory could not be %s.EXCEPTION_CODE: (NTSTATUS) 0xc0000005 - The instruction at 0x%p referenced memory at 0x%p. The memory could not be %s.EXCEPTION_PARAMETER1: 0000000000000000EXCEPTION_PARAMETER2: 000001df80000008READ_ADDRESS: 000001df80000008 FOLLOWUP_IP: QmakeProjectManager4!QmakeProjectManager::QmakePriFile::scheduleUpdate+28 [C:\Users\qt\work\build\qt-creator\src\plugins\qmakeprojectmanager\qmakeparsernodes.cpp @ 237] 00007ffd`777d1468 8b10 mov edx,dword ptr [rax]MOD_LIST: <ANALYSIS/>NTGLOBALFLAG: 0APPLICATION_VERIFIER_FLAGS: 0PRIMARY_PROBLEM_CLASS: INVALID_POINTER_READBUGCHECK_STR: APPLICATION_FAULT_INVALID_POINTER_READLAST_CONTROL_TRANSFER: from 00007ffd777ef233 to 00007ffd777d1468STACK_TEXT: 00000015`7c7ea8f0 00007ffd`777ef233 : 000001df`b7da1ee0 000001df`b3cec088 000001df`b7efeca0 000001df`b7efdb90 : QmakeProjectManager4!QmakeProjectManager::QmakePriFile::scheduleUpdate+0x28 [C:\Users\qt\work\build\qt-creator\src\plugins\qmakeprojectmanager\qmakeparsernodes.cpp @ 237] 00000015`7c7ea930 00007ffd`78ae42b0 : 000001df`b7da1ee0 000001df`b6fb4c30 000001df`b7efeb00 000001df`b7efea30 : QmakeProjectManager4!QmakeProjectManager::Internal::QmakePriFileDocument::reload+0x13 [C:\Users\qt\work\build\qt-creator\src\plugins\qmakeprojectmanager\qmakeproject.cpp @ 128] 00000015`7c7ea960 00007ffd`793e098a : 000001df`aef8d710 000001df`00000000 00000000`00000001 00000015`7c7eae90 : Core4!Core::DocumentManager::checkForReload+0x13e0 [C:\Users\qt\work\build\qt-creator\src\plugins\coreplugin\documentmanager.cpp @ 1292] 00000015`7c7ead50 00007ffd`793d94dd : 00000000`00000000 000001df`b3d52200 000001df`b400b2b0 00007ffd`793d1e60 : Qt5Core!QTimer::timeout+0xba 00000015`7c7ead90 00007ffd`7afe4990 : 000001df`a7535690 000001df`a7540600 00000015`7c7eb5a0 000001df`b6c99e90 : Qt5Core!QObject::event+0x8d 00000015`7c7eafa0 00007ffd`7afe3a13 : 000001df`a7535690 00000015`7c7eb0d0 00007ffd`7afd0000 00000000`00001000 : Qt5Widgets!QApplicationPrivate::notify_helper+0x110 00000015`7c7eafd0 00007ffd`793b2aca : 000001df`b6c9a950 00000000`00000001 00000000`00000001 000001df`a7554790 : Qt5Widgets!QApplication::notify+0x18b3 00000015`7c7eb510 00007ffd`793fd3c9 : 00000614`b25afcd4 00007ffd`7cdf4a4e 000001df`b6c9a950 00007ffd`79204f87 : Qt5Core!QCoreApplication::notifyInternal2+0xba 00000015`7c7eb580 00007ffd`793fb7f9 : 00000000`00000000 00000000`00000000 000001df`a96df050 00007ffd`793b535b : Qt5Core!QEventDispatcherWin32Private::sendTimerEvent+0xf9 00000015`7c7eb5d0 00007ffd`7afe4990 : 000001df`a7535690 000001df`a7535690 000001df`a7540600 000001df`b6c33c90 : Qt5Core!QEventDispatcherWin32::event+0x149 00000015`7c7eb620 00007ffd`7afe3a13 : 000001df`a7535690 00000015`7c7eb750 00007ffd`7afd0000 00000000`00000000 : Qt5Widgets!QApplicationPrivate::notify_helper+0x110 00000015`7c7eb650 00007ffd`793b2aca : 000001df`b6c33c90 00000015`7c7ebc08 000001df`b7db2bb0 000001df`a7554790 : Qt5Widgets!QApplication::notify+0x18b3 00000015`7c7ebb90 00007ffd`793b4845 : 00000000`00000000 00007ffd`e2d5a5c3 000001df`b6c33c90 000001df`a96df050 : Qt5Core!QCoreApplication::notifyInternal2+0xba 00000015`7c7ebc00 00007ffd`896d2dff : 000001df`b6c33c90 00007ff7`00000000 000001df`a96df050 000001df`b3b41da0 : Qt5Core!QCoreApplicationPrivate::sendPostedEvents+0x215 00000015`7c7ebcc0 00007ffd`793fba5a : 000001df`a96df050 00000015`00000004 00000000`00000000 000001df`a75547c0 : qwindows!qt_plugin_query_metadata+0x1fbf 00000015`7c7ebcf0 00007ffd`896d2dd9 : 000001df`a96df050 00000000`00000000 000001df`b3b41da0 00000000`00000000 : Qt5Core!QEventDispatcherWin32::processEvents+0x6a 00000015`7c7eee20 00007ffd`793aef2c : 00000000`00000000 00007ffd`00000014 00000000`00000000 00000000`00000000 : qwindows!qt_plugin_query_metadata+0x1f99 00000015`7c7eee50 00007ffd`793b1a94 : 000001df`a754c5c8 00000000`00000000 00000015`7c7ef010 00007ffd`794d1c90 : Qt5Core!QEventLoop::exec+0x1bc 00000015`7c7eeeb0 00007ff7`b1c324ee : 00000000`00000001 00007ffd`795b9440 00000000`00000003 00007ffd`795b9440 : Qt5Core!QCoreApplication::exec+0x154 00000015`7c7eef10 00007ff7`b1c38ac7 : 00000000`00000000 000001df`b3b5c2a0 000001df`a7520800 000001df`a7474700 : qtcreator!main+0x2a3e [C:\Users\qt\work\build\qt-creator\src\app\main.cpp @ 742] 00000015`7c7ef6b0 00007ff7`b1c379fe : 00000000`00000000 00000000`00000000 00000000`00000000 00000000`00000000 : qtcreator!WinMain+0x157 00000015`7c7ef740 00007ffd`e2f07034 : 00000000`00000000 00000000`00000000 00000000`00000000 00000000`00000000 : qtcreator!__scrt_common_main_seh+0x106 [D:\agent\_work\9\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl @ 288] 00000015`7c7ef780 00007ffd`e395d0d1 : 00000000`00000000 00000000`00000000 00000000`00000000 00000000`00000000 : KERNEL32!BaseThreadInitThunk+0x14 00000015`7c7ef7b0 00000000`00000000 : 00000000`00000000 00000000`00000000 00000000`00000000 00000000`00000000 : ntdll!RtlUserThreadStart+0x21 SYMBOL_STACK_INDEX: 0SYMBOL_NAME: qmakeprojectmanager4!QmakeProjectManager::QmakePriFile::scheduleUpdate+28FOLLOWUP_NAME: MachineOwnerMODULE_NAME: QmakeProjectManager4IMAGE_NAME: QmakeProjectManager4.dllDEBUG_FLR_IMAGE_TIMESTAMP: 5fdb1065STACK_COMMAND: dt ntdll!LdrpLastDllInitializer BaseDllName ; dt ntdll!LdrpFailureData ; ~0s ; kbFAILURE_BUCKET_ID: INVALID_POINTER_READ_c0000005_QmakeProjectManager4.dll!QmakeProjectManager::QmakePriFile::scheduleUpdateBUCKET_ID: X64_APPLICATION_FAULT_INVALID_POINTER_READ_qmakeprojectmanager4!QmakeProjectManager::QmakePriFile::scheduleUpdate+28Followup: MachineOwner ---------WARNING: Path element is empty 0:000> .reload Reloading current modules ...........................*** WARNING: Unable to verify checksum for C:\qt\qtcreator-4.14.0\lib\qtcreator\plugins\QmakeProjectManager4.dll ..................................... ................................................................ ................................................................ .................................
I hope this helps.
| For Gerrit Dashboard: QTCREATORBUG-25137 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 342660,3 | QmakeProjectManager: Fix possible crash on project document reload | 4.15 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |